--- a/everycheese/templates/base.html
+++ b/everycheese/templates/base.html
@@ -32,7 +32,8 @@
     <div class="m-b-1">
       <nav class="navbar navbar-dark navbar-static-top bg-inverse">
         <div class="container">
-          <a class="navbar-brand" href="/">EveryCheese</a>
+          <a class="navbar-brand" href="/">
+          <img src="{% static 'images/everycheese.png' %}" alt="everycheese" /></a>
           <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
             &#9776;
           </button>
