--- a/everycheese/static/css/project.css
+++ b/everycheese/static/css/project.css
@@ -1,38 +1,36 @@
-/* These styles are generated from project.scss. */
-
 .alert-debug {
-  color: black;
-  background-color: white;
+  background-color: #fff;
   border-color: #d6e9c6;
-}
+  color: #000; }
 
 .alert-error {
-  color: #b94a48;
   background-color: #f2dede;
   border-color: #eed3d7;
-}
+  color: #b94a48; }
 
-/* This is a fix for the bootstrap4 alpha release */
+.navbar {
+  border-radius: 0px;
+  background-color: #132c32; }
+
 @media (max-width: 47.9em) {
   .navbar-nav .nav-item {
-    float: none;
-    width: 100%;
     display: inline-block;
-  }
-
+    float: none;
+    width: 100%; }
   .navbar-nav .nav-item + .nav-item {
-    margin-left: 0;
-  }
-
+    margin-left: 0; }
   .nav.navbar-nav.pull-xs-right {
-    float: none !important;
-  }
-}
+    float: none !important; } }
 
-/* Display django-debug-toolbar.
-   See https://github.com/django-debug-toolbar/django-debug-toolbar/issues/742
-   and https://github.com/pydanny/cookiecutter-django/issues/317
-*/
+.nav-item {
+  margin: 12px; }
+
+.nav-link {
+  color: #D8D8D8;
+  font-size: 14px; }
+
 [hidden][style="display: block;"] {
-  display: block !important;
-}
+  display: block !important; }
+
+.jumbotron {
+  background-color: #a6e9d1; }
