trans archive by day

--- a/everycheese/templates/warehouse/warehouse_detail.html
+++ b/everycheese/templates/warehouse/warehouse_detail.html
@@ -21,7 +21,7 @@
             <tbody>
               <tr>
                 <td>{{tran.trans_amount}}</td>
-                <td>{{tran.trans_date}}</td>
+                <td><a href={{ tran.get_absolute_url }}>{{tran.trans_date}}</a></td>
                 <td>{{tran.trans_man}}</td>
               </tr>
             </tbody>
@@ -37,7 +37,7 @@
             <tbody>
               <tr>
                 <td>{{tran.trans_amount}}</td>
-                <td>{{tran.trans_date}}</td>
+                <td><a href={{ tran.get_absolute_url }}>{{tran.trans_date  }}</td>
                 <td>{{tran.trans_man}}</td>
               </tr>
             </tbody>
