started new app cal

--- a/everycheese/templates/warehouse/warehouse_list.html
+++ b/everycheese/templates/warehouse/warehouse_list.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+
+{% extends "warehouse/warehouse_nav.html" %}
 
 {% block title %}Warehouse List{% endblock title %}
 
@@ -7,10 +8,17 @@
 
 <h2>Warehouse List</h2>
 
+<p>
+  <button type="button" class="btn btn-primary ">
+    <span class="glyphicon glyphicon-plus"></span>
+    New item
+  </button>
+</p>
+
 
 <div class="row">
     <div class="col-sm-6">
-        <table class="table">
+        <table class="table" id='item-table'>
             <thead>
               <tr>
                 <th>Name</th>
@@ -26,7 +34,6 @@
             </tbody>
             {% endfor %}
         </table>
-        
     </div>
     
 </div>
