--- a/everycheese/templates/warehouse/warehouse_detail.html
+++ b/everycheese/templates/warehouse/warehouse_detail.html
@@ -1,5 +1,5 @@
 
-{% extends "base.html" %}
+{% extends "warehouse/warehouse_nav.html" %}
 
 {% block title %}Warehouse: {{ object }}{% endblock %}
 
